--- a/dashboard/Add student/addstudent.css
+++ b/dashboard/Add student/addstudent.css
@@ -1,90 +1,175 @@
-.cardFlex{
-    display: flex;
-    margin-top: 100px;
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Poppins', sans-serif;
 }
 
-#frontCard{
-    width: 200px;
-    height: 300px;
-    border: 2px solid blue;
-    border-radius: 10px;
+.main_section {
+    width: 100%;
+}
+
+.header {
+    width: 100%;
+    margin: 0px auto;
     text-align: center;
-    margin: auto;
-    color: blue;
+    background-color: white;
+    border-bottom: 1px solid #e2e2ee;
+
+
 }
 
-
-#backCard{
-    width: 200px;
-    height: 300px;
-    border: 8px solid blue;
-    border-radius: 10px;
-    text-align: justify;
-    margin: auto;
-    color: blue;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 12px;
+.logo {
+    text-align: center;
 }
 
-#cardHeader{
-    border-bottom: 4px solid blue;
+.side_headings {
+
+    color: grey;
+    /* background-color: aqua; */
+    padding: 10px;
+    margin: 5px;
 }
 
-#pic{
-    margin: auto;
-    border: 1px dotted grey;
-    padding: 40px;
-    border-radius: 10px;
-    background-repeat: no-repeat;
-    background-size: cover;
+.side_heading_text {
+    padding: 10px;
 }
 
-#cardName{
-    color: black;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
-}
-
-#idNumber{
+.sections {
+    padding: 20px;
     padding-bottom: 0px;
-    border-top: 1px solid blue;
-    border-left: 1px solid blue;
-    border-right: 1px solid blue;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    width: 160px;
-    margin: auto;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
+    padding-bottom: 0px;
 }
 
-#courseName{
-    background-color: blue;
-    color: #fff;
-    margin-top: -12px;
-    padding-top: 0%;
-    padding-bottom: 15px;
-    margin-bottom: 0px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+.section_app {
+    background-color: #fff;
+    padding: 10px 10px 0px 10px;
+    color: #83b5a6;
+    text-align: center;
+    border: 1px solid #e2e2ee;
+    border-bottom: 0px solid grey
 }
 
-#qrCode{
-    width: 80px;
+.section_app:hover {
+    cursor: pointer;
+}
+
+.admin {
+    color: #83b5a6;
+    background-color: #ebebec;
+    padding: 10px 10px 0px 10px;
+    text-align: center;
+}
+
+.admin:hover {
+    cursor: pointer;
+    background-color: #d3d3ee;
+}
+
+/* form */
+.form_section {
+    /* display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap; */
+    background-color: #fff;
+    padding: 25px;
+}
+
+.form_drop_down {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    /* margin-right: 10px; */
+    /* padding: 10px; */
+}
+
+.dropdown {
+    margin-right: 30px;
+}
+
+.data {
+    margin: 0px 10px;
+}
+
+input {
+    width: 410px;
+    height: 45px;
+    padding-left: 20px;
+    border: 1px solid #83b5a6;
+    border-radius: 5px;
+
+}
+p {
+    color: #83b5a6;
+}
+.input {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 30px;
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid #83b5a6;
+    transition: 0.5s;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+input::placeholder{
+    color: #d3d3ee;
+}
+input:hover {
+    cursor: pointer;
+}
+
+p {
+    margin: 5px;
+}
+
+.Select_qualification{
+    width: 870px;
+    border-radius: 5px;
+}
+.navbar {
+    background-color: #83b5a6;
+    /* width: 99%; */
     height: 80px;
+    text-align: center;
+    padding-top: 10px;
+    color: white;
 }
 
-#sign{
-    margin-block-start: 4em;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
-    color: black;
+.submit_btn {   
+     width: 50%;
+     margin: 10px auto;
+     text-align: center;
+     padding: 10px;
+    /* margin: 10px auto; */
+    background-color: #83b5a6;
+    /* padding: 10px; */
+    border-radius: 5px;
+    /* margin-left: 300px; */
+    width: 200px;
+    color: #fff;
+    /* align-items: center; */
+}
+.submit_btn:hover{
+    cursor: pointer;
 }
 
-p{
-    margin-inline-start: 20px;
-    margin-inline-end: 20px;
-}
+/* media qurey */
+
+@media only screen and (max-width: 400px) {
+    img {
+        width: 300px;
+    }
+    input{
+        width: 300px;
+    }
+    .input{
+        margin: 10px;
+    }
+  }
+
+  select.Select {
+    padding: 10px 15px;
+    border: 1px solid #83b5a6;}
