--- a/dashboard/student details/student.css
+++ b/dashboard/student details/student.css
@@ -1,7 +1,8 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
+
 .navbar {
     background-color: #83b5a6;
     /* width: 99%; */
@@ -10,8 +11,9 @@
     padding-top: 10px;
     color: white;
 }
-.card{
-    height: 400px;
+
+.card {
+    height: 420px;
     width: 300px;
     margin: 80px auto;
     text-align: center;
@@ -19,43 +21,54 @@
     padding-bottom: 50px;
     border-radius: 20px;
 }
-.status{
+
+.status {
     display: flex;
     justify-content: center;
     width: 90%;
     margin-left: 15px;
 }
-.text_status{
+
+.text {
+    display: flex;
+    margin-top: 10px;
+    justify-content: space-evenly;
+}
+
+.text_status {
     margin-right: 10px;
 }
 
-img{
+img {
     width: 150px;
     margin-top: 5px;
 }
 
 
-.data{
+.data {
     margin: -23px;
     padding: 10px;
 }
 
-.text{
+.text {
     /* display: flex;
     justify-content: space-between; */
     margin-bottom: 30px;
 }
-.text_name{
+
+.text_name {
     font-weight: bold;
 }
-#contain{
+
+#contain {
     display: flex;
     justify-content: space-between;
     width: 95%;
     margin: 0px auto;
     flex-wrap: wrap;
 }
-.card_main{
+
+.card_main {
     display: flex;
     flex-wrap: wrap;
 }
